apps/grafana/k8s-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`grafana.services.luke-domain.com`)
      services:
        - name: grafana
          port: 80
